# esp-chatgpt-companion

./: .gitignore  CMakeLists.txt  README.md  idf.sh  sdkconfig.defaults
factory_nvs/main/: Kconfig.projbuild  main.c
factory_nvs/main/ui/: ui.c  ui_helpers.c  ui_helpers.h
factory_nvs/squareline/: box_reset_mode.spj
main/: CMakeLists.txt  idf_component.yml  main.c  parser.c  parser.h  tts_api.c
main/app/: app_audio.c  app_ui_ctrl.c  app_ui_ctrl.h  app_ui_events.c
main/settings/: settings.c  settings.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
main/ui/images/: ui_eyes_temp.c  ui_speech_bubble.c
main/ui/screens/: ui_ScreenListen.c  ui_ScreenReset.c  ui_ScreenSettings.c  ui_ScreenSetup.c  ui_ScreenWifiReset.c
